cargo-features = ["edition"]

[package]
name = "squid-core"
version = "0.1.0"
authors = ["Ruben Schmidmeister <ruben.schmidmeister@icloud.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/squid-lang/squid"

[features]
use_serde = ["serde", "serde_derive"]

[dev-dependencies]
serde_test = "1.0"

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }